@@ -70,6 +70,8 @@ Unreleased changes (1.0-dev)
 22. NUTCH-434 - Replace usage of ObjectWritable with something based on 
     GenericWritable. (dogacan)
 
+23. NUTCH-499 - Refactor LinkDb and LinkDbMerger to reuse code. (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
